# University_work

./: Newton - Rapson.cpp  README.md  Zeidel.cpp
Python/4/: main.py
Python/5/: data.txt  gen_data.py  main.py
Python/6/: main.py
Python/7/: main.py
Python/8/: 1.py  main.py
Python/lab 1/: main.py
Python/lab 2/pythonProject/: 1.py  2.py  be.py
Python/lab3/: list.txt  main.py
Лабораторные/: Gaus-Jordan.cpp  Monte-Carlo.cpp  main.cpp
Лабораторные/фурье/: CMakeLists.txt
ООП/1/1.2/1.2/: 1.2.sln
ООП/1/1/1.0/: 1.0.sln
ООП/1/2/WpfApp1/: WpfApp1.sln
ООП/1/3/WpfApp1/: WpfApp1.sln
ООП/2/: WpfApp1.7z
ООП/2/4/: 4.sln
ООП/2/4/4/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
ООП/2/WpfApp1/: WpfApp1.sln
ООП/2/WpfApp1/WpfApp1/: GCD.cs  MainWindow.xaml  MainWindow.xaml.cs  TestGCD.cs
ООП/3/0/: 0.sln
ООП/3/0/0/: 0.csproj  Program.cs
ООП/3/1/: 1.sln
ООП/3/1/1/: Program.cs  Switch.cs
ООП/3/2/: 2.sln
ООП/3/2/2/: 2.csproj  MainWindow.xaml  (+1 more)
ООП/3/3/: 3.sln
ООП/3/4/: 4.sln
ООП/3/TestProject1/: TestProject1.sln
ООП/4/1/: 1.sln
ООП/4/2/: 2.sln
ООП/4/3/: 3.sln
ООП/4/4/: 4.sln
ООП/5/1/: 1.sln  App.xaml.cs  DeviceControl.cs  IMeasuringDevice.cs  MainWindow.xaml  MainWindow.xaml.cs  MeasureLengthDevice.cs  UnitsEnumeration.cs
ООП/5/2/: 2.sln
ООП/5/3/: 3.sln
ООП/6/1/: 1.csproj  1.sln  Device.cs  IEventEnabledMeasuringDevice.cs  MainWindow.xaml  MainWindow.xaml.cs  MeasureDataDevice.cs  MeasuringDevice.cs  MeasuringLengthDevice.cs  Units.cs
ООП/6/2/: 2.sln
ООП/6/3/: 3.sln
СиАОД/: Simpson.cpp
СиАОД/фурье/: main.cpp
(+54 files in other folders)
